# brainfhek

./: LLVM_NOTES.md  README.md  SPEC.md  pyproject.toml  requirements.txt  test_md.py  test_parse.py
bf2/: __init__.py  __main__.py  ast_nodes.py  cli.py  errors.py  interpreter.py  lexer.py  llvm_emit.py  memory.py  parser.py  preprocess.py  reactor.py  typechecker.py
bf2/backends/common/: memory.py  reactor.py
bf2/backends/interpreter/: engine.py
bf2/backends/llvm/: context.py  emit_expr.py  emit_io.py  emit_mem.py  emit_preamble.py  emit_reactive.py  emit_state.py  emit_stmts.py  emit_watch.py  emitter.py  jit.py  types.py
bf2/compiler/: diagnostics.py  lexer.py  parser.py  preprocess.py  typechecker.py
bf2/core/: analysis.py  ast.py  memory.py  visitor.py
bf2/liro/: __init__.py  base.py  dead_branch_elim.py  loop_metadata.py  runner.py  static_watch_fold.py
bf2/stdlib/: __init__.py  stdlib.bf2
examples/: brainfuck.bf2  fibonacci-small.bf2  fibonacci.bf2  fizzbuzz.bf2  float_test.bf2  hello.bf  hello.bf2  linked_vector_add.bf2  llvm_cell_ops.bf2  reactive_clamp.bf2  string_reverse.bf2  struct_point.bf2
tests/: conftest.py  test_cli.py  test_diagnostics.py  test_diagnostics_overhaul.py  test_interpreter.py  test_jit.py  test_lexer.py  test_linked_segments.py  test_liro.py  test_llvm.py  test_parser.py  test_preprocess.py  test_typechecker.py
