[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bf2"
version = "0.1.0"
description = "BF2 — Brainfhek (aka Brainfuck 2.0) compiler and interpreter"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
bf2 = "bf2.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bf2*"]

[tool.setuptools.package-data]
bf2 = ["stdlib/*.bf2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
